fix: focus visible erabiltzen du

--- a/front/src/views/components/Oina/Oina.module.scss
+++ b/front/src/views/components/Oina/Oina.module.scss
@@ -16,7 +16,7 @@
     color: var(--color-morea);
   }
 
-  &:focus {
+  &:focus-visible {
     outline: 2px solid var(--color-morea);
   }
 }
@@ -60,7 +60,7 @@
     }
   }
 
-  &:focus {
+  &:focus-visible {
     outline: 3px solid var(--color-morea);
   }
 
